compiler assignments/hw3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> class_decl_list
Rule 2     class_decl_list -> class_decl class_decl_list
Rule 3     class_decl_list -> <empty>
Rule 4     class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE
Rule 5     class_decl -> CLASS ID extends LBRACE error RBRACE
Rule 6     extends -> EXTENDS ID
Rule 7     extends -> <empty>
Rule 8     class_body_decl_list -> class_body_decl_list class_body_decl
Rule 9     class_body_decl_list -> class_body_decl
Rule 10    class_body_decl -> field_decl
Rule 11    class_body_decl -> method_decl
Rule 12    class_body_decl -> constructor_decl
Rule 13    field_decl -> mod var_decl
Rule 14    method_decl -> mod VOID ID LPAREN param_list_opt RPAREN block
Rule 15    method_decl -> mod type ID LPAREN param_list_opt RPAREN block
Rule 16    constructor_decl -> mod ID LPAREN param_list_opt RPAREN block
Rule 17    mod -> visibility_mod applicability_mod
Rule 18    visibility_mod -> PUBLIC
Rule 19    visibility_mod -> PRIVATE
Rule 20    visibility_mod -> <empty>
Rule 21    applicability_mod -> STATIC
Rule 22    applicability_mod -> <empty>
Rule 23    var_decl -> type var_list SEMICOLON
Rule 24    type -> INT
Rule 25    type -> BOOLEAN
Rule 26    type -> FLOAT
Rule 27    type -> ID
Rule 28    var_list -> var_list COMMA var
Rule 29    var_list -> var
Rule 30    var -> ID
Rule 31    param_list_opt -> param_list
Rule 32    param_list_opt -> <empty>
Rule 33    param_list -> param_list COMMA param
Rule 34    param_list -> param
Rule 35    param -> type var
Rule 36    block -> LBRACE stmt_list RBRACE
Rule 37    block -> LBRACE stmt_list error RBRACE
Rule 38    stmt_list -> <empty>
Rule 39    stmt_list -> stmt_list stmt
Rule 40    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 41    stmt -> IF LPAREN expr RPAREN stmt
Rule 42    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 43    stmt -> FOR LPAREN stmt_expr_opt SEMICOLON expr_opt SEMICOLON stmt_expr_opt RPAREN stmt
Rule 44    stmt -> RETURN expr_opt SEMICOLON
Rule 45    stmt -> stmt_expr SEMICOLON
Rule 46    stmt -> BREAK SEMICOLON
Rule 47    stmt -> CONTINUE SEMICOLON
Rule 48    stmt -> block
Rule 49    stmt -> var_decl
Rule 50    stmt -> error SEMICOLON
Rule 51    literal -> INT_CONST
Rule 52    literal -> FLOAT_CONST
Rule 53    literal -> STRING_CONST
Rule 54    literal -> NULL
Rule 55    literal -> TRUE
Rule 56    literal -> FALSE
Rule 57    primary -> literal
Rule 58    primary -> THIS
Rule 59    primary -> SUPER
Rule 60    primary -> LPAREN expr RPAREN
Rule 61    primary -> NEW ID LPAREN args_opt RPAREN
Rule 62    primary -> lhs
Rule 63    primary -> method_invocation
Rule 64    args_opt -> arg_plus
Rule 65    args_opt -> <empty>
Rule 66    arg_plus -> arg_plus COMMA expr
Rule 67    arg_plus -> expr
Rule 68    lhs -> field_access
Rule 69    field_access -> primary DOT ID
Rule 70    field_access -> ID
Rule 71    method_invocation -> field_access LPAREN args_opt RPAREN
Rule 72    expr -> primary
Rule 73    expr -> assign
Rule 74    expr -> expr PLUS expr
Rule 75    expr -> expr MINUS expr
Rule 76    expr -> expr MULTIPLY expr
Rule 77    expr -> expr DIVIDE expr
Rule 78    expr -> expr EQ expr
Rule 79    expr -> expr NEQ expr
Rule 80    expr -> expr LT expr
Rule 81    expr -> expr LEQ expr
Rule 82    expr -> expr GT expr
Rule 83    expr -> expr GEQ expr
Rule 84    expr -> expr AND expr
Rule 85    expr -> expr OR expr
Rule 86    expr -> PLUS expr
Rule 87    expr -> MINUS expr
Rule 88    expr -> NOT expr
Rule 89    assign -> lhs ASSIGN expr
Rule 90    assign -> lhs INC
Rule 91    assign -> INC lhs
Rule 92    assign -> lhs DEC
Rule 93    assign -> DEC lhs
Rule 94    stmt_expr -> assign
Rule 95    stmt_expr -> method_invocation
Rule 96    stmt_expr_opt -> stmt_expr
Rule 97    stmt_expr_opt -> <empty>
Rule 98    expr_opt -> expr
Rule 99    expr_opt -> <empty>

Terminals, with rules where they appear

AND                  : 84
ASSIGN               : 89
BOOLEAN              : 25
BREAK                : 46
CLASS                : 4 5
COMMA                : 28 33 66
CONTINUE             : 47
DEC                  : 92 93
DIVIDE               : 77
DOT                  : 69
ELSE                 : 40
EQ                   : 78
EXTENDS              : 6
FALSE                : 56
FLOAT                : 26
FLOAT_CONST          : 52
FOR                  : 43
GEQ                  : 83
GT                   : 82
ID                   : 4 5 6 14 15 16 27 30 61 69 70
IF                   : 40 41
INC                  : 90 91
INT                  : 24
INT_CONST            : 51
LBRACE               : 4 5 36 37
LBRACKET             : 
LEQ                  : 81
LPAREN               : 14 15 16 40 41 42 43 60 61 71
LT                   : 80
MINUS                : 75 87
MULTIPLY             : 76
NEQ                  : 79
NEW                  : 61
NOT                  : 88
NULL                 : 54
OR                   : 85
PLUS                 : 74 86
PRIVATE              : 19
PUBLIC               : 18
RBRACE               : 4 5 36 37
RBRACKET             : 
RETURN               : 44
RPAREN               : 14 15 16 40 41 42 43 60 61 71
SEMICOLON            : 23 43 43 44 45 46 47 50
STATIC               : 21
STRING_CONST         : 53
SUPER                : 59
THIS                 : 58
TRUE                 : 55
VOID                 : 14
WHILE                : 42
error                : 5 37 50

Nonterminals, with rules where they appear

applicability_mod    : 17
arg_plus             : 64 66
args_opt             : 61 71
assign               : 73 94
block                : 14 15 16 48
class_body_decl      : 8 9
class_body_decl_list : 4 8
class_decl           : 2
class_decl_list      : 1 2
constructor_decl     : 12
expr                 : 40 41 42 60 66 67 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 87 88 89 98
expr_opt             : 43 44
extends              : 4 5
field_access         : 68 71
field_decl           : 10
lhs                  : 62 89 90 91 92 93
literal              : 57
method_decl          : 11
method_invocation    : 63 95
mod                  : 13 14 15 16
param                : 33 34
param_list           : 31 33
param_list_opt       : 14 15 16
pgm                  : 0
primary              : 69 72
stmt                 : 39 40 40 41 42 43
stmt_expr            : 45 96
stmt_expr_opt        : 43 43
stmt_list            : 36 37 39
type                 : 15 23 35
var                  : 28 29 35
var_decl             : 13 49
var_list             : 23 28
visibility_mod       : 17

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    class_decl_list                shift and go to state 4
    pgm                            shift and go to state 1
    class_decl                     shift and go to state 3

state 1

    (0) S' -> pgm .



state 2

    (4) class_decl -> CLASS . ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS . ID extends LBRACE error RBRACE

    ID              shift and go to state 5


state 3

    (2) class_decl_list -> class_decl . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    class_decl_list                shift and go to state 6
    class_decl                     shift and go to state 3

state 4

    (1) pgm -> class_decl_list .

    $end            reduce using rule 1 (pgm -> class_decl_list .)


state 5

    (4) class_decl -> CLASS ID . extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID . extends LBRACE error RBRACE
    (6) extends -> . EXTENDS ID
    (7) extends -> .

    EXTENDS         shift and go to state 8
    LBRACE          reduce using rule 7 (extends -> .)

    extends                        shift and go to state 7

state 6

    (2) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 2 (class_decl_list -> class_decl class_decl_list .)


state 7

    (4) class_decl -> CLASS ID extends . LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID extends . LBRACE error RBRACE

    LBRACE          shift and go to state 9


state 8

    (6) extends -> EXTENDS . ID

    ID              shift and go to state 10


state 9

    (4) class_decl -> CLASS ID extends LBRACE . class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID extends LBRACE . error RBRACE
    (8) class_body_decl_list -> . class_body_decl_list class_body_decl
    (9) class_body_decl_list -> . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . mod var_decl
    (14) method_decl -> . mod VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> . mod ID LPAREN param_list_opt RPAREN block
    (17) mod -> . visibility_mod applicability_mod
    (18) visibility_mod -> . PUBLIC
    (19) visibility_mod -> . PRIVATE
    (20) visibility_mod -> .

    error           shift and go to state 19
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 12
    STATIC          reduce using rule 20 (visibility_mod -> .)
    VOID            reduce using rule 20 (visibility_mod -> .)
    ID              reduce using rule 20 (visibility_mod -> .)
    INT             reduce using rule 20 (visibility_mod -> .)
    BOOLEAN         reduce using rule 20 (visibility_mod -> .)
    FLOAT           reduce using rule 20 (visibility_mod -> .)

    class_body_decl                shift and go to state 14
    field_decl                     shift and go to state 17
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 18
    visibility_mod                 shift and go to state 15
    class_body_decl_list           shift and go to state 13
    mod                            shift and go to state 16

state 10

    (6) extends -> EXTENDS ID .

    LBRACE          reduce using rule 6 (extends -> EXTENDS ID .)


state 11

    (12) class_body_decl -> constructor_decl .

    RBRACE          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 12 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 12 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 12 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 12 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> constructor_decl .)


state 12

    (19) visibility_mod -> PRIVATE .

    STATIC          reduce using rule 19 (visibility_mod -> PRIVATE .)
    VOID            reduce using rule 19 (visibility_mod -> PRIVATE .)
    ID              reduce using rule 19 (visibility_mod -> PRIVATE .)
    INT             reduce using rule 19 (visibility_mod -> PRIVATE .)
    BOOLEAN         reduce using rule 19 (visibility_mod -> PRIVATE .)
    FLOAT           reduce using rule 19 (visibility_mod -> PRIVATE .)


state 13

    (4) class_decl -> CLASS ID extends LBRACE class_body_decl_list . RBRACE
    (8) class_body_decl_list -> class_body_decl_list . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . mod var_decl
    (14) method_decl -> . mod VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> . mod ID LPAREN param_list_opt RPAREN block
    (17) mod -> . visibility_mod applicability_mod
    (18) visibility_mod -> . PUBLIC
    (19) visibility_mod -> . PRIVATE
    (20) visibility_mod -> .

    RBRACE          shift and go to state 22
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 12
    STATIC          reduce using rule 20 (visibility_mod -> .)
    VOID            reduce using rule 20 (visibility_mod -> .)
    ID              reduce using rule 20 (visibility_mod -> .)
    INT             reduce using rule 20 (visibility_mod -> .)
    BOOLEAN         reduce using rule 20 (visibility_mod -> .)
    FLOAT           reduce using rule 20 (visibility_mod -> .)

    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 17
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 18
    visibility_mod                 shift and go to state 15
    mod                            shift and go to state 16

state 14

    (9) class_body_decl_list -> class_body_decl .

    RBRACE          reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    VOID            reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    ID              reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    INT             reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    FLOAT           reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    STATIC          reduce using rule 9 (class_body_decl_list -> class_body_decl .)


state 15

    (17) mod -> visibility_mod . applicability_mod
    (21) applicability_mod -> . STATIC
    (22) applicability_mod -> .

    STATIC          shift and go to state 23
    VOID            reduce using rule 22 (applicability_mod -> .)
    ID              reduce using rule 22 (applicability_mod -> .)
    INT             reduce using rule 22 (applicability_mod -> .)
    BOOLEAN         reduce using rule 22 (applicability_mod -> .)
    FLOAT           reduce using rule 22 (applicability_mod -> .)

    applicability_mod              shift and go to state 24

state 16

    (13) field_decl -> mod . var_decl
    (14) method_decl -> mod . VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> mod . type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> mod . ID LPAREN param_list_opt RPAREN block
    (23) var_decl -> . type var_list SEMICOLON
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    VOID            shift and go to state 26
    ID              shift and go to state 31
    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27

    var_decl                       shift and go to state 29
    type                           shift and go to state 30

state 17

    (10) class_body_decl -> field_decl .

    RBRACE          reduce using rule 10 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> field_decl .)
    VOID            reduce using rule 10 (class_body_decl -> field_decl .)
    ID              reduce using rule 10 (class_body_decl -> field_decl .)
    INT             reduce using rule 10 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> field_decl .)


state 18

    (11) class_body_decl -> method_decl .

    RBRACE          reduce using rule 11 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> method_decl .)
    VOID            reduce using rule 11 (class_body_decl -> method_decl .)
    ID              reduce using rule 11 (class_body_decl -> method_decl .)
    INT             reduce using rule 11 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> method_decl .)


state 19

    (5) class_decl -> CLASS ID extends LBRACE error . RBRACE

    RBRACE          shift and go to state 32


state 20

    (18) visibility_mod -> PUBLIC .

    STATIC          reduce using rule 18 (visibility_mod -> PUBLIC .)
    VOID            reduce using rule 18 (visibility_mod -> PUBLIC .)
    ID              reduce using rule 18 (visibility_mod -> PUBLIC .)
    INT             reduce using rule 18 (visibility_mod -> PUBLIC .)
    BOOLEAN         reduce using rule 18 (visibility_mod -> PUBLIC .)
    FLOAT           reduce using rule 18 (visibility_mod -> PUBLIC .)


state 21

    (8) class_body_decl_list -> class_body_decl_list class_body_decl .

    RBRACE          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    VOID            reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    ID              reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    INT             reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    FLOAT           reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    STATIC          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)


state 22

    (4) class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .)
    $end            reduce using rule 4 (class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .)


state 23

    (21) applicability_mod -> STATIC .

    VOID            reduce using rule 21 (applicability_mod -> STATIC .)
    ID              reduce using rule 21 (applicability_mod -> STATIC .)
    INT             reduce using rule 21 (applicability_mod -> STATIC .)
    BOOLEAN         reduce using rule 21 (applicability_mod -> STATIC .)
    FLOAT           reduce using rule 21 (applicability_mod -> STATIC .)


state 24

    (17) mod -> visibility_mod applicability_mod .

    VOID            reduce using rule 17 (mod -> visibility_mod applicability_mod .)
    ID              reduce using rule 17 (mod -> visibility_mod applicability_mod .)
    INT             reduce using rule 17 (mod -> visibility_mod applicability_mod .)
    BOOLEAN         reduce using rule 17 (mod -> visibility_mod applicability_mod .)
    FLOAT           reduce using rule 17 (mod -> visibility_mod applicability_mod .)


state 25

    (24) type -> INT .

    ID              reduce using rule 24 (type -> INT .)


state 26

    (14) method_decl -> mod VOID . ID LPAREN param_list_opt RPAREN block

    ID              shift and go to state 33


state 27

    (26) type -> FLOAT .

    ID              reduce using rule 26 (type -> FLOAT .)


state 28

    (25) type -> BOOLEAN .

    ID              reduce using rule 25 (type -> BOOLEAN .)


state 29

    (13) field_decl -> mod var_decl .

    RBRACE          reduce using rule 13 (field_decl -> mod var_decl .)
    PUBLIC          reduce using rule 13 (field_decl -> mod var_decl .)
    PRIVATE         reduce using rule 13 (field_decl -> mod var_decl .)
    VOID            reduce using rule 13 (field_decl -> mod var_decl .)
    ID              reduce using rule 13 (field_decl -> mod var_decl .)
    INT             reduce using rule 13 (field_decl -> mod var_decl .)
    BOOLEAN         reduce using rule 13 (field_decl -> mod var_decl .)
    FLOAT           reduce using rule 13 (field_decl -> mod var_decl .)
    STATIC          reduce using rule 13 (field_decl -> mod var_decl .)


state 30

    (15) method_decl -> mod type . ID LPAREN param_list_opt RPAREN block
    (23) var_decl -> type . var_list SEMICOLON
    (28) var_list -> . var_list COMMA var
    (29) var_list -> . var
    (30) var -> . ID

    ID              shift and go to state 36

    var                            shift and go to state 34
    var_list                       shift and go to state 35

state 31

    (16) constructor_decl -> mod ID . LPAREN param_list_opt RPAREN block
    (27) type -> ID .

    LPAREN          shift and go to state 37
    ID              reduce using rule 27 (type -> ID .)


state 32

    (5) class_decl -> CLASS ID extends LBRACE error RBRACE .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID extends LBRACE error RBRACE .)
    $end            reduce using rule 5 (class_decl -> CLASS ID extends LBRACE error RBRACE .)


state 33

    (14) method_decl -> mod VOID ID . LPAREN param_list_opt RPAREN block

    LPAREN          shift and go to state 38


state 34

    (29) var_list -> var .

    SEMICOLON       reduce using rule 29 (var_list -> var .)
    COMMA           reduce using rule 29 (var_list -> var .)


state 35

    (23) var_decl -> type var_list . SEMICOLON
    (28) var_list -> var_list . COMMA var

    SEMICOLON       shift and go to state 40
    COMMA           shift and go to state 39


state 36

    (15) method_decl -> mod type ID . LPAREN param_list_opt RPAREN block
    (30) var -> ID .

    LPAREN          shift and go to state 41
    SEMICOLON       reduce using rule 30 (var -> ID .)
    COMMA           reduce using rule 30 (var -> ID .)


state 37

    (16) constructor_decl -> mod ID LPAREN . param_list_opt RPAREN block
    (31) param_list_opt -> . param_list
    (32) param_list_opt -> .
    (33) param_list -> . param_list COMMA param
    (34) param_list -> . param
    (35) param -> . type var
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    RPAREN          reduce using rule 32 (param_list_opt -> .)
    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27
    ID              shift and go to state 46

    param_list                     shift and go to state 42
    param                          shift and go to state 44
    param_list_opt                 shift and go to state 43
    type                           shift and go to state 45

state 38

    (14) method_decl -> mod VOID ID LPAREN . param_list_opt RPAREN block
    (31) param_list_opt -> . param_list
    (32) param_list_opt -> .
    (33) param_list -> . param_list COMMA param
    (34) param_list -> . param
    (35) param -> . type var
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    RPAREN          reduce using rule 32 (param_list_opt -> .)
    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27
    ID              shift and go to state 46

    param_list                     shift and go to state 42
    param                          shift and go to state 44
    param_list_opt                 shift and go to state 47
    type                           shift and go to state 45

state 39

    (28) var_list -> var_list COMMA . var
    (30) var -> . ID

    ID              shift and go to state 49

    var                            shift and go to state 48

state 40

    (23) var_decl -> type var_list SEMICOLON .

    RBRACE          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    error           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    IF              reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    WHILE           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    FOR             reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    RETURN          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    BREAK           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    CONTINUE        reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    LBRACE          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    INC             reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    DEC             reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    INT             reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    BOOLEAN         reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    FLOAT           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    ID              reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    THIS            reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    SUPER           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    LPAREN          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    NEW             reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    INT_CONST       reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    FLOAT_CONST     reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    STRING_CONST    reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    NULL            reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    TRUE            reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    FALSE           reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    ELSE            reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    PUBLIC          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    PRIVATE         reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    VOID            reduce using rule 23 (var_decl -> type var_list SEMICOLON .)
    STATIC          reduce using rule 23 (var_decl -> type var_list SEMICOLON .)


state 41

    (15) method_decl -> mod type ID LPAREN . param_list_opt RPAREN block
    (31) param_list_opt -> . param_list
    (32) param_list_opt -> .
    (33) param_list -> . param_list COMMA param
    (34) param_list -> . param
    (35) param -> . type var
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    RPAREN          reduce using rule 32 (param_list_opt -> .)
    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27
    ID              shift and go to state 46

    param_list                     shift and go to state 42
    param                          shift and go to state 44
    param_list_opt                 shift and go to state 50
    type                           shift and go to state 45

state 42

    (31) param_list_opt -> param_list .
    (33) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 31 (param_list_opt -> param_list .)
    COMMA           shift and go to state 51


state 43

    (16) constructor_decl -> mod ID LPAREN param_list_opt . RPAREN block

    RPAREN          shift and go to state 52


state 44

    (34) param_list -> param .

    COMMA           reduce using rule 34 (param_list -> param .)
    RPAREN          reduce using rule 34 (param_list -> param .)


state 45

    (35) param -> type . var
    (30) var -> . ID

    ID              shift and go to state 49

    var                            shift and go to state 53

state 46

    (27) type -> ID .

    ID              reduce using rule 27 (type -> ID .)


state 47

    (14) method_decl -> mod VOID ID LPAREN param_list_opt . RPAREN block

    RPAREN          shift and go to state 54


state 48

    (28) var_list -> var_list COMMA var .

    SEMICOLON       reduce using rule 28 (var_list -> var_list COMMA var .)
    COMMA           reduce using rule 28 (var_list -> var_list COMMA var .)


state 49

    (30) var -> ID .

    SEMICOLON       reduce using rule 30 (var -> ID .)
    COMMA           reduce using rule 30 (var -> ID .)
    RPAREN          reduce using rule 30 (var -> ID .)


state 50

    (15) method_decl -> mod type ID LPAREN param_list_opt . RPAREN block

    RPAREN          shift and go to state 55


state 51

    (33) param_list -> param_list COMMA . param
    (35) param -> . type var
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27
    ID              shift and go to state 46

    type                           shift and go to state 45
    param                          shift and go to state 56

state 52

    (16) constructor_decl -> mod ID LPAREN param_list_opt RPAREN . block
    (36) block -> . LBRACE stmt_list RBRACE
    (37) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 57

    block                          shift and go to state 58

state 53

    (35) param -> type var .

    COMMA           reduce using rule 35 (param -> type var .)
    RPAREN          reduce using rule 35 (param -> type var .)


state 54

    (14) method_decl -> mod VOID ID LPAREN param_list_opt RPAREN . block
    (36) block -> . LBRACE stmt_list RBRACE
    (37) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 57

    block                          shift and go to state 59

state 55

    (15) method_decl -> mod type ID LPAREN param_list_opt RPAREN . block
    (36) block -> . LBRACE stmt_list RBRACE
    (37) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 57

    block                          shift and go to state 60

state 56

    (33) param_list -> param_list COMMA param .

    COMMA           reduce using rule 33 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 33 (param_list -> param_list COMMA param .)


state 57

    (36) block -> LBRACE . stmt_list RBRACE
    (37) block -> LBRACE . stmt_list error RBRACE
    (38) stmt_list -> .
    (39) stmt_list -> . stmt_list stmt

    RBRACE          reduce using rule 38 (stmt_list -> .)
    error           reduce using rule 38 (stmt_list -> .)
    IF              reduce using rule 38 (stmt_list -> .)
    WHILE           reduce using rule 38 (stmt_list -> .)
    FOR             reduce using rule 38 (stmt_list -> .)
    RETURN          reduce using rule 38 (stmt_list -> .)
    BREAK           reduce using rule 38 (stmt_list -> .)
    CONTINUE        reduce using rule 38 (stmt_list -> .)
    LBRACE          reduce using rule 38 (stmt_list -> .)
    INC             reduce using rule 38 (stmt_list -> .)
    DEC             reduce using rule 38 (stmt_list -> .)
    INT             reduce using rule 38 (stmt_list -> .)
    BOOLEAN         reduce using rule 38 (stmt_list -> .)
    FLOAT           reduce using rule 38 (stmt_list -> .)
    ID              reduce using rule 38 (stmt_list -> .)
    THIS            reduce using rule 38 (stmt_list -> .)
    SUPER           reduce using rule 38 (stmt_list -> .)
    LPAREN          reduce using rule 38 (stmt_list -> .)
    NEW             reduce using rule 38 (stmt_list -> .)
    INT_CONST       reduce using rule 38 (stmt_list -> .)
    FLOAT_CONST     reduce using rule 38 (stmt_list -> .)
    STRING_CONST    reduce using rule 38 (stmt_list -> .)
    NULL            reduce using rule 38 (stmt_list -> .)
    TRUE            reduce using rule 38 (stmt_list -> .)
    FALSE           reduce using rule 38 (stmt_list -> .)

    stmt_list                      shift and go to state 61

state 58

    (16) constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .

    RBRACE          reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    PUBLIC          reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    PRIVATE         reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    VOID            reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    ID              reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    INT             reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    BOOLEAN         reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    FLOAT           reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)
    STATIC          reduce using rule 16 (constructor_decl -> mod ID LPAREN param_list_opt RPAREN block .)


state 59

    (14) method_decl -> mod VOID ID LPAREN param_list_opt RPAREN block .
